fix overflow

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1826,3 +1826,7 @@ input:user-invalid {
 #doodleCanvas {
   touch-action: none;
 }
+
+#spreadsheetEditorDiv {
+  overflow: scroll;
+}
